image sizing alignment issue fixed + table UI

--- a/components/mixins/dw_colors.scss
+++ b/components/mixins/dw_colors.scss
@@ -15,6 +15,8 @@ $dw-background      : #F2F4F8;
 $dw-background-light: #F2F4F8;
 $dw-brand-primary   : #EE437E;
 $dw-brand-secondary : #68318E;
+$dw-brand-primary-light  :  #FFDEEB;
+$dw-brand-secondary-light:  #F3E9FF;
 
 $dw-brand-dark      : #131D2F;
 $dw-brand-light     : #2C3E50;
@@ -29,6 +31,8 @@ $dw-busy            : #9272B2;
 $dw-afterwork       : #F68D40;
 $dw-break           : #F7CA0F;
 $dw_idle            : #243B54;
+
+
 
 
 
